--- a/Day2/Task2/index.html
+++ b/Day2/Task2/index.html
@@ -16,7 +16,7 @@
                 return (Number(a.match(numReg)) - Number(b.match(numReg)));
             })          
 
-            return arr;
+            return arr.join(" ");
         }
 
         console.log(sortString("is2 Thi1s T4est 3a"));
