--- a/Day4 14.02/big data/index.html
+++ b/Day4 14.02/big data/index.html
@@ -10,7 +10,7 @@
 
     <div style="text-align: center;">
         <button onClick="countColor()">Count colors</button>
-        <button onClick="mostFrequent()">Most frequent color</button>
+        <button onClick="maxColor()">Most frequent color</button>
         <button onClick="countCars()">OVD and count cars</button>
         <button onClick="oldAndNew()">Old and new car</button>
     </div>
