--- a/JS Core - February/Day 10 HW (tic-tac, battle ship, random, user)/Task 3 random user/index.html
+++ b/JS Core - February/Day 10 HW (tic-tac, battle ship, random, user)/Task 3 random user/index.html
@@ -46,8 +46,8 @@
         <input type="text" disabled id="womenAvgAge">
     </div>
     <div>
-        <label for="city">Город с наибольшим количеством юзеров в выборкe(город, количество)</label>
-        <input type="text" disabled id="city">
+        <label for="countUsers">Город с наибольшим количеством юзеров в выборкe(город, количество)</label>
+        <input type="text" disabled id="countUsers">
     </div>
 
     <script src="script.js"></script>
