--- a/Demo 1/index.html
+++ b/Demo 1/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="./src/task1.js"></script> -->
     <!-- <script src="./src/task2.js"></script> -->
-    <script src="./src/task3.js"></script>
+    <!-- <script src="./src/task3.js"></script> -->
+    <script src="./src/task7.js"></script>
 </body>
 </html>
