--- a/Demo 1/index.html
+++ b/Demo 1/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./src/task1.js"></script> -->
     <!-- <script src="./src/task2.js"></script> -->
     <!-- <script src="./src/task3.js"></script> -->
-    <script src="./src/task7.js"></script>
+    <script src="./src/task6.js"></script>
+    <!-- <script src="./src/task7.js"></script>  -->
 </body>
 </html>
