--- a/JS Core - March/Day_2 03.03 mocha, chai/index.html
+++ b/JS Core - March/Day_2 03.03 mocha, chai/index.html
@@ -3,19 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.1.0/mocha.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/2.1.0/mocha.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/2.0.0/chai.js"></script>
-  <script>
-    // mocha.setup('bdd');
-    // let assert = chai.assert;
-  </script>
 </head>
 
 <body>
-  <div id="mocha"></div>
-  <script src="test/test.js" type="module"></script>
+  <div id="root"></div>
+
+  <script src="app/main.js" type="module"></script>
 
 </body>
 
