--- a/JS Core - March/Day_4 13.03 shop example/index.html
+++ b/JS Core - March/Day_4 13.03 shop example/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="./app/main.js" type="module"></script>
+    <div class="menu"><input type="text" class="inp-search"></div>
+    <div class="topics-list"></div>
+    <script src="app/main.js" type="module"></script>
 </body>
+
 </html>
